# kakeibo-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json
.codex/: AGENTS.md  (+1 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260501_0001_initial_schema.py  20260501_0002_sample_data.py  20260502_0003_income_settings.py  20260502_0004_sample_trend_data.py  20260505_0005_category_budgets.py  20260505_0006_income_setting_periods.py  20260508_0007_remove_auto_sample_data.py  20260508_0008_category_rules.py
backend/app/: main.py
backend/app/application/: audit_logs.py  common.py  dates.py  errors.py  income_settings.py  report_models.py  reports.py  settings.py  transaction_views.py  transactions.py
backend/app/bootstrap/: __init__.py  container.py  income_transactions.py  seed_sample_data.py
backend/app/domain/: auth.py  entities.py  initial_categories.py  repositories.py  value_objects.py
backend/app/infrastructure/: config.py  storage.py
backend/app/presentation/: errors.py
backend/scripts/: generate_openapi_client.py  generate_requirements_lock.py
backend/tests/: conftest.py
backend/tests/application/: test_auth_security.py  test_excel_exporter.py  test_layer_dependencies.py  test_rakuten_card_pdf_parser.py  test_transactions.py
backend/tests/domain/: test_entities.py  test_money_jpy.py
backend/tests/fixtures/: rakuten_card_statement_expected.json  rakuten_card_statement_text.txt
backend/tests/infrastructure/: test_repositories.py
(+407 files in other folders)
